# carve

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
Carve/: CmakeLists.txt  carve.cpp  convex_hull.cpp  csg.cpp  csg_collector.cpp  face.cpp  geom.cpp  geom2d.cpp  geom3d.cpp  intersect.cpp  intersect_classify_edge.cpp  intersect_classify_group.cpp  intersect_debug.cpp  intersect_face_division.cpp  intersect_half_classify_group.cpp  intersection.cpp  math.cpp  mesh.cpp  octree.cpp  polyhedron.cpp  polyline.cpp  shewchuk_predicates.cpp  triangle_intersection.cpp  triangulator.cpp
Carve/carve/: carve.hpp  cbrt.h  classification.hpp  csg.hpp  csg_triangulator.hpp  djset.hpp  geom3d.hpp  mesh.hpp  mesh_impl.hpp  mesh_simplify.hpp  polyhedron_impl.hpp  polyline_impl.hpp  polyline_iter.hpp  util.hpp
carve/: CMakeLists.txt  CmakeLists.txt  carve.cpp  carve.h  custom_collector.h
carve_dll/: CmakeLists.txt  carve_dll.cpp  carve_dll.h
carve_run/: 3DFileReader.cpp  3DFileReader.h  CMakeLists.txt  main.cpp
libcarve/: CMakeLists.txt  CmakeLists.txt  carve.cpp  convex_hull.cpp  csg.cpp  csg_collector.cpp  csg_collector.hpp  csg_data.hpp  csg_detail.hpp  debugVisualizers.natvis  face.cpp  geom.cpp  geom2d.cpp  geom3d.cpp  intersect.cpp  intersect_classify_common.hpp  intersect_classify_common_impl.hpp  intersect_classify_edge.cpp  intersect_classify_group.cpp  intersect_common.hpp  intersect_debug.cpp  intersect_debug.hpp  intersect_face_division.cpp  intersect_group.cpp  intersect_half_classify_group.cpp  intersection.cpp  math.cpp  mesh.cpp  octree.cpp  pointset.cpp  polyhedron.cpp  polyline.cpp  shewchuk_predicates.cpp  tag.cpp  triangle_intersection.cpp  triangulator.cpp
libcarve/carve/: carve.hpp  classification.hpp  collection.hpp  collection_types.hpp  config.h  csg.hpp  csg_triangulator.hpp  djset.hpp  face_decl.hpp  face_impl.hpp  geom2d.hpp  geom3d.hpp  interpolator.hpp  intersection.hpp  iobj.hpp  mesh.hpp  mesh_impl.hpp  mesh_ops.hpp  mesh_simplify.hpp  pointset.hpp  polyhedron_decl.hpp  polyhedron_impl.hpp  polyline_decl.hpp  polyline_impl.hpp  polyline_iter.hpp  robin_hood.hpp  rtree.hpp  tree.hpp  triangulator_impl.hpp  util.hpp  vertex_decl.hpp  win32.h
libcarve/carve/collection/: unordered.hpp
libcarve/include/: aabb.hpp  aabb_impl.hpp  carve.hpp  classification.hpp  collection.hpp  collection_types.hpp  convex_hull.hpp  csg.hpp  csg_triangulator.hpp  debug_hooks.hpp  djset.hpp  edge_decl.hpp  edge_impl.hpp  exact.hpp  face_decl.hpp  face_impl.hpp  faceloop.hpp  geom.hpp  geom2d.hpp  geom3d.hpp  geom_impl.hpp  heap.hpp  input.hpp  interpolator.hpp  intersection.hpp  iobj.hpp  kd_node.hpp  math.hpp  math_constants.hpp  matrix.hpp  mesh.hpp  mesh_impl.hpp  mesh_ops.hpp  mesh_simplify.hpp  octree_decl.hpp  octree_impl.hpp  pointset.hpp  pointset_decl.hpp  pointset_impl.hpp  poly.hpp  (+24 more)
run/: 3DFileReader.cpp  3DFileReader.h  CmakeLists.txt  main.cpp
